# linkyt

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
boards/arm/blue_linky/: Kconfig  Kconfig.board  Kconfig.defconfig  blue_linky.dts  blue_linky.yaml  blue_linky_defconfig
sdk/nRF5_SDK_17.1.0_ddde560/components/toolchain/gcc/: Makefile.posix
src/: Makefile  error_handlers.h  feather_nrf52840_board.h  main.c
src/config/: sdk_config.h  sdk_config_dev.h
src/service/: ble_linkyt.c  ble_linkyt.h
src/teleinfo/: tags.h  teleinfo.c  teleinfo.h
src/uart/: uart.c  uart.h
test/: Cargo.toml
test/src/: main.rs
